--- a/MVC/Views/Movies/Delete.cshtml
+++ b/MVC/Views/Movies/Delete.cshtml
@@ -41,6 +41,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Rating)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.PosterRoute)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.PosterRoute)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
