--- a/MVC/Views/Movies/Edit.cshtml
+++ b/MVC/Views/Movies/Edit.cshtml
@@ -39,6 +39,11 @@
                 <span asp-validation-for="Rating" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="PosterRoute" class="control-label"></label>
+                <input asp-for="PosterRoute" class="form-control" />
+                <span asp-validation-for="PosterRoute" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
