--- a/MVC/Views/Shared/_Layout.cshtml
+++ b/MVC/Views/Shared/_Layout.cshtml
@@ -1,4 +1,12 @@
-﻿<!DOCTYPE html>
+﻿@using BusinessLayer;
+@using DataLayer;
+@using Microsoft.AspNetCore.Identity;
+
+@inject SignInManager<User> signInManager
+@inject UserManager<User> userManager
+@inject IdentityContext identityContext
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -25,6 +33,34 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        @if (signInManager.IsSignedIn(User))
+                        {
+                            @if (identityContext.IsUserAdmin(await userManager.FindByNameAsync(User.Identity.Name)))
+                            {
+                               <li class="nav-item">
+                                   <a class="nav-link text-dark" asp-area="" asp-controller="Movies" asp-action="Index">Movies</a>
+                               </li>
+                               <li class="nav-item">
+                                   <a class="nav-link text-dark" asp-area="" asp-controller="Showtimes" asp-action="Index">Showtimes</a>
+                               </li>
+                               <li class="nav-item">
+                                   <a class="nav-link text-dark" asp-area="" asp-controller="Halls" asp-action="Index">Halls</a>
+                               </li>
+                               <li class="nav-item">
+                                   <a class="nav-link text-dark" asp-area="" asp-controller="Seats" asp-action="Index">Seats</a>
+                               </li>
+                               <li class="nav-item">
+                                   <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Users</a>
+                               </li>
+                               <li class="nav-item">
+                                   <a class="nav-link text-dark" asp-area="" asp-controller="Tickets" asp-action="Index">Tickets</a>
+                               </li>
+                               <li class="nav-item">
+                                   <a class="nav-link text-dark" asp-area="" asp-controller="Reviews" asp-action="Index">Reviews</a>
+                               </li>
+                            }
+                        }
+                        
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
