--- a/MVC/Views/Movies/Index.cshtml
+++ b/MVC/Views/Movies/Index.cshtml
@@ -1,4 +1,12 @@
-﻿@model IEnumerable<BusinessLayer.Movie>
+﻿@using BusinessLayer;
+@using DataLayer;
+@using Microsoft.AspNetCore.Identity;
+
+@inject SignInManager<User> signInManager
+@inject UserManager<User> userManager
+@inject IdentityContext identityContext
+
+@model IEnumerable<BusinessLayer.Movie>
 
 @{
     ViewData["Title"] = "Index";
@@ -6,9 +14,15 @@
 
 <h1>Index</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+@if (signInManager.IsSignedIn(User))
+{
+    @if (identityContext.IsUserAdmin(await userManager.FindByNameAsync(User.Identity.Name)))
+    {
+        <p>
+            <a asp-action="Create">Create New</a>
+        </p>
+    }
+}
 <table class="table">
     <thead>
         <tr>
@@ -54,10 +68,17 @@
             <td>
                 @Html.DisplayFor(modelItem => item.PosterRoute)
             </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+            <td>            
+                @if (signInManager.IsSignedIn(User))
+                {
+                    @if (identityContext.IsUserAdmin(await userManager.FindByNameAsync(User.Identity.Name)))
+                    {
+                        <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    }
+                }
+                
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a>
             </td>
         </tr>
 }
