--- a/MVC/Views/Seats/Create.cshtml
+++ b/MVC/Views/Seats/Create.cshtml
@@ -1,7 +1,11 @@
-﻿@model BusinessLayer.Seat
+﻿@using BusinessLayer;
+
+@model BusinessLayer.Seat
 
 @{
     ViewData["Title"] = "Create";
+    var tickets = ViewBag.Tickets;
+    var halls = ViewBag.Halls;
 }
 
 <h1>Create</h1>
@@ -24,16 +28,19 @@
             </div>
             <div class="form-group">
                 <label asp-for="Availability" class="control-label"></label>
-                <select asp-for="Availability" class="form-control"></select>
+                @Html.DropDownListFor(
+                connection => connection.Availability,
+                Html.GetEnumSelectList<SeatAvailability>(),
+                new { @class = "form-control" })
                 <span asp-validation-for="Availability" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="HallId" class="control-label"></label>
-                <select asp-for="HallId" class ="form-control" asp-items="ViewBag.HallId"></select>
+                <select asp-for="HallId" class ="form-control" asp-items=@halls></select>
             </div>
             <div class="form-group">
                 <label asp-for="TicketId" class="control-label"></label>
-                <select asp-for="TicketId" class ="form-control" asp-items="ViewBag.TicketId"></select>
+                <select asp-for="TicketId" class ="form-control" asp-items=@tickets></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
