--- a/MVC/Views/Showtimes/Create.cshtml
+++ b/MVC/Views/Showtimes/Create.cshtml
@@ -2,6 +2,8 @@
 
 @{
     ViewData["Title"] = "Create";
+    var movies = ViewBag.Movies;
+    var halls = ViewBag.Halls;
 }
 
 <h1>Create</h1>
@@ -14,7 +16,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="MovieId" class="control-label"></label>
-                <select asp-for="MovieId" class ="form-control" asp-items="ViewBag.MovieId"></select>
+                <select asp-for="MovieId" class ="form-control" asp-items=@movies></select>
             </div>
             <div class="form-group">
                 <label asp-for="StartTime" class="control-label"></label>
@@ -28,7 +30,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="HallId" class="control-label"></label>
-                <select asp-for="HallId" class ="form-control" asp-items="ViewBag.HallId"></select>
+                <select asp-for="HallId" class ="form-control" asp-items=@halls></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
@@ -40,4 +42,10 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
 
