--- a/MVC/Views/Showtimes/Edit.cshtml
+++ b/MVC/Views/Showtimes/Edit.cshtml
@@ -2,6 +2,8 @@
 
 @{
     ViewData["Title"] = "Edit";
+    var movies = ViewBag.Movies;
+    var halls = ViewBag.Halls;
 }
 
 <h1>Edit</h1>
@@ -15,7 +17,7 @@
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="MovieId" class="control-label"></label>
-                <select asp-for="MovieId" class="form-control" asp-items="ViewBag.MovieId"></select>
+                <select asp-for="MovieId" class="form-control" asp-items=@movies></select>
                 <span asp-validation-for="MovieId" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -30,7 +32,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="HallId" class="control-label"></label>
-                <select asp-for="HallId" class="form-control" asp-items="ViewBag.HallId"></select>
+                <select asp-for="HallId" class="form-control" asp-items=@halls></select>
                 <span asp-validation-for="HallId" class="text-danger"></span>
             </div>
             <div class="form-group">
