--- a/MVC/Views/Tickets/Create.cshtml
+++ b/MVC/Views/Tickets/Create.cshtml
@@ -18,12 +18,8 @@
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="UserId" class="control-label"></label>
-                <select asp-for="UserId" class ="form-control" asp-items="ViewBag.UserId"></select>
-            </div>
-            <div class="form-group">
                 <label asp-for="ShowtimeId" class="control-label"></label>
-                <select asp-for="ShowtimeId" class ="form-control" asp-items="ViewBag.ShowtimeId"></select>
+                <select asp-for="ShowtimeId" class ="form-control" asp-items="ViewBag.Showtimes"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
