--- a/MVC/Views/Movies/Details.cshtml
+++ b/MVC/Views/Movies/Details.cshtml
@@ -53,7 +53,7 @@
             @Html.DisplayNameFor(model => model.PosterRoute)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.PosterRoute)
+            <img src="~/img/@Html.DisplayFor(model => model.PosterRoute)">
         </dd>
     </dl>
 </div>
