--- a/MVC/Views/Seats/Index.cshtml
+++ b/MVC/Views/Seats/Index.cshtml
@@ -43,7 +43,7 @@
                 @Html.DisplayFor(modelItem => item.Availability)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Hall.Id)
+                @Html.DisplayFor(modelItem => item.Hall.Number)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Ticket.UserId)
