--- a/MVC/Views/Tickets/Create.cshtml
+++ b/MVC/Views/Tickets/Create.cshtml
@@ -4,11 +4,11 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Reserve</h1>
 
 <h4>Ticket</h4>
 <hr />
-<div class="row">
+@*<div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -26,7 +26,149 @@
             </div>
         </form>
     </div>
+</div>*@
+<div class="row">
+    <div class="col-md-4">
+        <section>
+            <form asp-action="Create">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="Price" class="control-label"></label>
+                    <input asp-for="Price" id="priceId" class="form-control" />
+                    <span asp-validation-for="Price" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="ShowtimeId" class="control-label"></label>
+                    <select asp-for="ShowtimeId" class="form-control" asp-items="ViewBag.Showtimes"></select>
+                </div>
+                <input type="hidden" name="additionalInfo1" id="additionalInfo1" />
+                <input type="hidden" name="additionalInfo2" id="additionalInfo2" />
+                <div class="form-group">
+                    <input type="submit" value="Create" class="btn btn-primary"  />
+                </div>
+            </form>
+        </section>
+    </div>
+    <div class="col-md-6 col-md-offset-2" style="background-color: #d8f7ff">
+        <section>
+            <body>
+                <ul class="showcase" style="background-color: #d8f7ff">
+                    <li>
+                        <div class="seat"></div>
+                        <small>Available</small>
+                    </li>
+                    <li>
+                        <div class="seat selected"></div>
+                        <small>Selected</small>
+                    </li>
+                    <li>
+                        <div class="seat sold"></div>
+                        <small>Sold</small>
+                    </li>
+                </ul>
+                <div class="container">
+                    <div class="screen"></div>
+
+                    <div class="containers" style="display: flex; justify-content: center;">
+                        <div class="row-seat" style="display: flex;">
+                            <div class="seat" id="seat1"></div>
+                            <div class="seat" id="seat2"></div>
+                            <div class="seat" id="seat3"></div>
+                            <div class="seat" id="seat4"></div>
+                            <div class="seat" id="seat5"></div>
+                            <div class="seat" id="seat6"></div>
+                            <div class="seat" id="seat7"></div>
+                            <div class="seat" id="seat8"></div>
+                        </div>
+                    </div>
+                    <div class="containers" style="display: flex; justify-content: center;">
+                        <div class="row-seat" style="display: flex;">
+                            <div class="seat"></div>
+                            <div class="seat"></div>
+                            <div class="seat"></div>
+                            <div class="seat"></div>
+                            <div class="seat"></div>
+                            <div class="seat"></div>
+                            <div class="seat"></div>
+                            <div class="seat"></div>
+                        </div>
+                    </div>
+
+                    <div class="containers" style="display: flex; justify-content: center;">
+                        <div class="row-seat" style="display: flex;">
+                            <div class="seat"></div>
+                            <div class="seat"></div>
+                            <div class="seat"></div>
+                            <div class="seat"></div>
+                            <div class="seat"></div>
+                            <div class="seat"></div>
+                            <div class="seat"></div>
+                            <div class="seat"></div>
+                        </div>
+                    </div>
+                    <div class="containers" style="display: flex; justify-content: center;">
+                        <div class="row-seat" style="display: flex;">
+                            <div class="seat"></div>
+                            <div class="seat"></div>
+                            <div class="seat"></div>
+                            <div class="seat"></div>
+                            <div class="seat sold"></div>
+                            <div class="seat sold"></div>
+                            <div class="seat"></div>
+                            <div class="seat"></div>
+                        </div>
+                    </div>
+                    <div class="containers" style="display: flex; justify-content: center;">
+                        <div class="row-seat" style="display: flex;">
+                            <div class="seat"></div>
+                            <div class="seat"></div>
+                            <div class="seat"></div>
+                            <div class="seat"></div>
+                            <div class="seat"></div>
+                            <div class="seat"></div>
+                            <div class="seat"></div>
+                            <div class="seat"></div>
+                        </div>
+                    </div>
+                    <div class="containers" style="display: flex; justify-content: center;">
+                        <div class="row-seat" style="display: flex;">
+                            <div class="seat"></div>
+                            <div class="seat"></div>
+                            <div class="seat"></div>
+                            <div class="seat"></div>
+                            <div class="seat sold"></div>
+                            <div class="seat"></div>
+                            <div class="seat"></div>
+                            <div class="seat"></div>
+                        </div>
+                    </div>
+                    <div class="containers" style="display: flex; justify-content: center;">
+                        <div class="row-seat" style="display: flex;">
+                            <div class="seat"></div>
+                            <div class="seat sold"></div>
+                            <div class="seat"></div>
+                            <div class="seat"></div>
+                            <div class="seat"></div>
+                            <div class="seat"></div>
+                            <div class="seat"></div>
+                            <div class="seat"></div>
+                        </div>
+                    </div>
+                </div>
+
+                <p class="text">
+                    You have selected <span id="count">0</span> seat for a price of LV.<span id="total">0</span>
+                </p>
+                
+            </body>
+        </section>
+    </div>
+    <script src="~/js/site.js"></script>
 </div>
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
 
 <div>
     <a asp-action="Index">Back to List</a>
