--- a/MVC/Areas/Identity/Pages/Account/Register.cshtml
+++ b/MVC/Areas/Identity/Pages/Account/Register.cshtml
@@ -52,7 +52,8 @@
     </div>
     <div class="col-md-6 col-md-offset-2">
         <section>
-            <h3>Use another service to register.</h3>
+            <img src="~/img/registerPagePic.png" alt="Register" class="bigger-image" />
+            @*<h3>Use another service to register.</h3>
             <hr />
             @{
                 if ((Model.ExternalLogins?.Count ?? 0) == 0)
@@ -77,7 +78,7 @@
                         </div>
                     </form>
                 }
-            }
+            }*@
         </section>
     </div>
 </div>
