--- a/MVC/Views/Home/Index.cshtml
+++ b/MVC/Views/Home/Index.cshtml
@@ -7,8 +7,9 @@
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>-->
 <div class="container">
-    <h1>Welcome to My Cinema</h1>
-    <p>Discover the latest movies, showtimes, and more!</p>
+    <h1 class="centered">Welcome to My Cinema</h1>
+    <p class="centered">Discover the latest movies, showtimes, and more!</p>
+    <img src="~/img/homePagePic.png" alt="Cinema" class="bigger-image" />
     <!-- Add movie posters, trailers, and other relevant content here -->
 </div>
 
