--- a/MVC/Views/Reviews/Create.cshtml
+++ b/MVC/Views/Reviews/Create.cshtml
@@ -22,13 +22,13 @@
                 <input asp-for="Rating" class="form-control" />
                 <span asp-validation-for="Rating" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="UserId" class="control-label"></label>
-                <select asp-for="UserId" class ="form-control" asp-items="ViewBag.UserId"></select>
-            </div>
+                <select asp-for="UserId" class ="form-control" asp-items="ViewBag.Users"></select>
+            </div>*@
             <div class="form-group">
                 <label asp-for="MovieId" class="control-label"></label>
-                <select asp-for="MovieId" class ="form-control" asp-items="ViewBag.MovieId"></select>
+                <select asp-for="MovieId" class ="form-control" asp-items="ViewBag.Movies"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
