--- a/MVC/Views/Showtimes/Details.cshtml
+++ b/MVC/Views/Showtimes/Details.cshtml
@@ -22,7 +22,7 @@
             @Html.DisplayNameFor(model => model.Movie)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Movie.Description)
+            @Html.DisplayFor(model => model.MovieId)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.StartTime)
@@ -53,5 +53,4 @@
         }
     }
     <a asp-action="Index">Back to List</a>
-    <a asp-action="Reservation">Reservation</a>
 </div>
