--- a/MVC/Views/Tickets/Edit.cshtml
+++ b/MVC/Views/Tickets/Edit.cshtml
@@ -18,14 +18,14 @@
                 <input asp-for="Price" class="form-control" />
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="UserId" class="control-label"></label>
-                <select asp-for="UserId" class="form-control" asp-items="ViewBag.UserId"></select>
+                <select asp-for="UserId" class="form-control" asp-items="ViewBag.Users"></select>
                 <span asp-validation-for="UserId" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <label asp-for="ShowtimeId" class="control-label"></label>
-                <select asp-for="ShowtimeId" class="form-control" asp-items="ViewBag.ShowtimeId"></select>
+                <select asp-for="ShowtimeId" class="form-control" asp-items="ViewBag.Showtimes"></select>
                 <span asp-validation-for="ShowtimeId" class="text-danger"></span>
             </div>
             <div class="form-group">
