--- a/MVC/Views/Tickets/Index.cshtml
+++ b/MVC/Views/Tickets/Index.cshtml
@@ -53,7 +53,8 @@
                         <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                     }
                 }
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a>
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="Checkout" asp-route-id="@item.Id">Checkout</a>
             </td>
         </tr>
 }
