--- a/MVC/wwwroot/css/site.css
+++ b/MVC/wwwroot/css/site.css
@@ -13,6 +13,138 @@ html {
   min-height: 100%;
 }
 
+img {
+    display: block;
+    margin: 0 auto;
+}
+
+.bigger-image {
+    width: 100%;
+}
+
+.centered {
+    text-align:center;
+}
+
+/*a {
+    background-color: #;
+    color: white;
+}*/
+
+button {
+    background-color: lightsalmon;
+}
+
+nav {
+    background-color: #d05252a9 !important;
+    color: white !important;
+    padding: 10px !important;
+}
+
 body {
   margin-bottom: 60px;
+}
+
+/*COPIED*/
+
+.movie-container {
+    margin: 20px 0;
+}
+
+    .movie-container select {
+        background-color: #fff;
+        border: 0;
+        border-radius: 5px;
+        font-size: 16px;
+        margin-left: 10px;
+        padding: 5px 15px 5px 15px;
+        -moz-appearance: none;
+        -webkit-appearance: none;
+        appearance: none;
+    }
+
+.container {
+    perspective: 1000px;
+    margin-bottom: 30px;
+}
+
+.seat {
+    background-color: #777;
+    height: 26px;
+    width: 32px;
+    margin: 3px;
+    font-size: 50px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+    .seat.selected {
+        background-color: #1465d1;
+    }
+
+    .seat.sold {
+        background-color: #200995;
+    }
+
+    .seat:nth-of-type(2) {
+        margin-right: 18px;
+    }
+
+    .seat:nth-last-of-type(2) {
+        margin-left: 18px;
+    }
+
+    .seat:not(.sold):hover {
+        cursor: pointer;
+        transform: scale(1.2);
+    }
+
+.showcase .seat:not(.sold):hover {
+    cursor: default;
+    transform: scale(1);
+}
+
+.showcase {
+    background: rgba(0, 0, 0, 0.1);
+    padding: 5px 10px;
+    border-radius: 5px;
+    color: #777;
+    list-style-type: none;
+    display: flex;
+    justify-content: space-between;
+}
+
+    .showcase li {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 0 10px;
+    }
+
+        .showcase li small {
+            margin-left: 2px;
+        }
+
+.containers {
+    display: flex;
+    justify-content: center; /* Center the flex items horizontally */
+}
+
+.row {
+    display: flex; /* Make the row a flex container */
+}
+
+.screen-seat {
+    width: 200px; /* Adjust this value as needed */
+    /* Center the element */
+    margin: 0 auto;
+}
+
+.screen {
+    background-color: #2a2020;
+    height: 120px;
+    width: 100%;
+    margin: 15px 0;
+    transform: rotateX(-48deg);
+    box-shadow: 0 3px 10px rgba(255, 255, 255, 0.7);
 }
