--- a/MVC/Views/Showtimes/Index.cshtml
+++ b/MVC/Views/Showtimes/Index.cshtml
@@ -46,7 +46,7 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Movie.Description)
+                @Html.DisplayFor(modelItem => item.Movie.Title)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.StartTime)
