--- a/MVC/Views/Tickets/Fail.cshtml
+++ b/MVC/Views/Tickets/Fail.cshtml
@@ -5,7 +5,7 @@
     </div>
     <h3 class="col-12 text-center" style="color:darkred">
         <br />
-        Thank you! <br />
+        Sorry:( <br />
 
     </h3>
 </div>
