--- a/MVC/Views/Reviews/Details.cshtml
+++ b/MVC/Views/Reviews/Details.cshtml
@@ -26,13 +26,13 @@
             @Html.DisplayNameFor(model => model.User)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.User.Id)
+            @Html.DisplayFor(model => model.User.UserName)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Movie)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Movie.Description)
+            @Html.DisplayFor(model => model.Movie.Title)
         </dd>
     </dl>
 </div>
