--- a/MVC/Views/Tickets/Create.cshtml
+++ b/MVC/Views/Tickets/Create.cshtml
@@ -8,25 +8,6 @@
 
 <h4>Ticket</h4>
 <hr />
-@*<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Price" class="control-label"></label>
-                <input asp-for="Price" class="form-control" />
-                <span asp-validation-for="Price" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ShowtimeId" class="control-label"></label>
-                <select asp-for="ShowtimeId" class ="form-control" asp-items="ViewBag.Showtimes"></select>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>*@
 <div class="row">
     <div class="col-md-4">
         <section>
@@ -44,7 +25,7 @@
                 <input type="hidden" name="additionalInfo1" id="additionalInfo1" />
                 <input type="hidden" name="additionalInfo2" id="additionalInfo2" />
                 <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-primary"  />
+                    <input type="submit" value="Create" onclick="changeClass()" class="btn btn-primary" id="buttonForCreate" />
                 </div>
             </form>
         </section>
