--- a/MVC/Views/Users/Index.cshtml
+++ b/MVC/Views/Users/Index.cshtml
@@ -9,6 +9,9 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+<p>
+    <a asp-action="Statistics">Statistics</a>
+</p>
 <table class="table">
     <thead>
         <tr>
