--- a/MVC/wwwroot/css/site.css
+++ b/MVC/wwwroot/css/site.css
@@ -62,14 +62,17 @@ body {
 }
 
 .seat {
-    background-color: #777;
-    height: 26px;
+    background-color: white;
+    accent-color: #1465d1;
+    height: 30px;
     width: 32px;
-    margin: 3px;
+    margin: 8px;
     font-size: 50px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
+
+
 
     .seat.selected {
         background-color: #1465d1;
@@ -79,13 +82,13 @@ body {
         background-color: #200995;
     }
 
-    .seat:nth-of-type(2) {
+    /*.seat:nth-of-type(2) {
         margin-right: 18px;
-    }
+    }*/
 
-    .seat:nth-last-of-type(2) {
+    /*.seat:nth-last-of-type(2) {
         margin-left: 18px;
-    }
+    }*/
 
     .seat:not(.sold):hover {
         cursor: pointer;
