--- a/MVC/Areas/Identity/Pages/Account/Register.cshtml
+++ b/MVC/Areas/Identity/Pages/Account/Register.cshtml
@@ -52,7 +52,7 @@
     </div>
     <div class="col-md-6 col-md-offset-2">
         <section>
-            <img src="~/img/registerPagePic.png" alt="Register" class="bigger-image" />           
+            <img src="~/img/registerPagePic.png" alt="Register" class="bigger-image" style="background-color:#cd4b32" />
         </section>
     </div>
 </div>
