--- a/MVC/Views/Showtimes/Create.cshtml
+++ b/MVC/Views/Showtimes/Create.cshtml
@@ -33,7 +33,7 @@
                 <select asp-for="HallId" class ="form-control" asp-items=@halls></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary" style="background-color:#cd4b32" />
             </div>
         </form>
     </div>
