--- a/MVC/Views/Halls/Create.cshtml
+++ b/MVC/Views/Halls/Create.cshtml
@@ -23,7 +23,7 @@
                 <span asp-validation-for="SeatsCount" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary" style="background-color:#cd4b32" />
             </div>
         </form>
     </div>
