--- a/MVC/Views/Halls/Edit.cshtml
+++ b/MVC/Views/Halls/Edit.cshtml
@@ -24,7 +24,7 @@
                 <span asp-validation-for="SeatsCount" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" style="background-color:#cd4b32" />
             </div>
         </form>
     </div>
