--- a/MVC/Views/Reviews/Create.cshtml
+++ b/MVC/Views/Reviews/Create.cshtml
@@ -27,7 +27,7 @@
                 <select asp-for="MovieId" class ="form-control" asp-items="ViewBag.Movies"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary" style="background-color:#cd4b32" />
             </div>
         </form>
     </div>
