--- a/MVC/Views/Reviews/Edit.cshtml
+++ b/MVC/Views/Reviews/Edit.cshtml
@@ -34,7 +34,7 @@
                 <span asp-validation-for="MovieId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" style="background-color:#cd4b32" />
             </div>
         </form>
     </div>
