--- a/MVC/Views/Seats/Edit.cshtml
+++ b/MVC/Views/Seats/Edit.cshtml
@@ -43,7 +43,7 @@
                 <select asp-for="TicketId" class="form-control" asp-items=@tickets></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" style="background-color:#cd4b32" />
             </div>
         </form>
     </div>
