--- a/MVC/Views/Tickets/Details.cshtml
+++ b/MVC/Views/Tickets/Details.cshtml
@@ -2,6 +2,8 @@
 
 @{
     ViewData["Title"] = "Details";
+    List<int> nums = ViewBag.Seats;
+    
 }
 
 <h1>Details</h1>
@@ -27,6 +29,12 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Showtime.Id)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Seats)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => string.Join(',', nums))
         </dd>
     </dl>
 </div>
