--- a/MVC/Views/Users/Create.cshtml
+++ b/MVC/Views/Users/Create.cshtml
@@ -41,7 +41,7 @@
                 <select asp-for="Role" class="form-control" asp-items="ViewBag.Role"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary" style="background-color:#cd4b32"/>
             </div>
         </form>
     </div>
