--- a/MVC/Views/Users/Edit.cshtml
+++ b/MVC/Views/Users/Edit.cshtml
@@ -42,7 +42,7 @@
                 <select asp-for="Role" class="form-control" asp-items="ViewBag.Role"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" style="background-color:#cd4b32" />
             </div>
         </form>
     </div>
